added tests to install cleanup bootstrap

--- a/install/config/.env
+++ b/install/config/.env
@@ -1,5 +1,5 @@
 # Base path for all persistent container data
-DATA_PATH=/opt/containers/sys
+DATA_PATH=/opt/ztcl/sys
 
 # Headscale container
 HEADSCALE_NAME=headscale
