fixed Podman registeries.conf

--- a/install/config/.env
+++ b/install/config/.env
@@ -11,7 +11,7 @@ HEADSCALE_SERVER_URL=http://192.168.10.4:6888
 
 # CoreDNS container
 COREDNS_NAME=coredns
-COREDNS_IMAGE=coredns/coredns:latest
+COREDNS_IMAGE=docker.io/coredns/coredns:1.11.1
 COREDNS_TCP_PORT=53
 COREDNS_UDP_PORT=53
 
@@ -46,3 +46,6 @@ STUN_PORT=3478
 
 # Optional TLS cert email for Caddy
 TLS_EMAIL=you@ztcloud.org
+
+# PODMAN REGISTERY
+PODMAN_RESTART_ON_REGISTRY_UPDATE=true
