--- a/install/config/.env
+++ b/install/config/.env
@@ -28,7 +28,7 @@ BASE_DOMAIN=ztcloud.ztcl
 
 # etcd container
 ETCD_NAME=etcd
-ETCD_IMAGE=quay.io/coreos/etcd:latest
+ETCD_IMAGE=quay.io/coreos/etcd:v3.5.21-amd64
 ETCD_NODE_NAME=node1
 ETCD_CLUSTER_TOKEN=etcd-cluster-1
 ETCD_CLIENT_PORT=2379
