--- a/install/config/.env
+++ b/install/config/.env
@@ -3,7 +3,7 @@ DATA_PATH=/opt/ztcl/sys
 
 # Headscale container
 HEADSCALE_NAME=headscale
-HEADSCALE_IMAGE=headscale/headscale:stable
+HEADSCALE_IMAGE=ghcr.io/juanfont/headscale:latest
 HEADSCALE_HTTP_PORT=6888
 HEADSCALE_STUN_PORT=3478
 HEADSCALE_GRPC_PORT=50443
@@ -17,7 +17,7 @@ COREDNS_UDP_PORT=53
 
 # Caddy container
 CADDY_NAME=caddy
-CADDY_IMAGE=caddy:latest
+CADDY_IMAGE=CADDY_IMAGE=docker.io/library/caddy:latest
 CADDY_ADMIN_PORT=2019
 CADDY_HTTPS_PORT=443
 
