--- a/install/config/ztcloud-compose.yaml
+++ b/install/config/ztcloud-compose.yaml
@@ -1,19 +1,18 @@
-version: '3.8'
-
 services:
   headscale:
-    image: ${HEADSCALE_IMAGE:-headscale/headscale:stable}
-    container_name: ${HEADSCALE_NAME:-headscale}
-    entrypoint: /bin/sh -c "envsubst < /etc/headscale/config.template.yaml > /etc/headscale/config.yaml && exec headscale serve"
-    ports:
-      - "${HEADSCALE_HTTP_PORT:-6888}:8080"
-      - "${HEADSCALE_STUN_PORT:-3478}:3478/udp"
-    volumes:
-      - "${DATA_PATH:-/opt/containers/sys}/headscale/config.template.yaml:/etc/headscale/config.template.yaml"
-      - "${DATA_PATH:-/opt/containers/sys}/headscale/data:/var/lib/headscale"
-    restart: unless-stopped
-    networks:
-      - ztcloud
+  image: ${HEADSCALE_IMAGE:-ghcr.io/juanfont/headscale:latest}
+  container_name: ${HEADSCALE_NAME:-headscale}
+  command: headscale serve
+  ports:
+    - "${HEADSCALE_HTTP_PORT:-6888}:8080"
+    - "${HEADSCALE_STUN_PORT:-3478}:3478/udp"
+  volumes:
+    - "${DATA_PATH:-/opt/containers/sys}/headscale/config.yaml:/etc/headscale/config.yaml"
+    - "${DATA_PATH:-/opt/containers/sys}/headscale/data:/var/lib/headscale"
+  restart: unless-stopped
+  networks:
+    - ztcloud
+
 
   etcd:
     image: ${ETCD_IMAGE:-quay.io/coreos/etcd:latest}
