--- a/install/config/ztcloud-compose.yaml
+++ b/install/config/ztcloud-compose.yaml
@@ -1,18 +1,19 @@
+version: '3.8'
+
 services:
   headscale:
-  image: ${HEADSCALE_IMAGE:-ghcr.io/juanfont/headscale:latest}
-  container_name: ${HEADSCALE_NAME:-headscale}
-  command: headscale serve
-  ports:
-    - "${HEADSCALE_HTTP_PORT:-6888}:8080"
-    - "${HEADSCALE_STUN_PORT:-3478}:3478/udp"
-  volumes:
-    - "${DATA_PATH:-/opt/containers/sys}/headscale/config.yaml:/etc/headscale/config.yaml"
-    - "${DATA_PATH:-/opt/containers/sys}/headscale/data:/var/lib/headscale"
-  restart: unless-stopped
-  networks:
-    - ztcloud
-
+    image: ${HEADSCALE_IMAGE:-ghcr.io/juanfont/headscale:latest}
+    container_name: ${HEADSCALE_NAME:-headscale}
+    command: headscale serve
+    ports:
+      - "${HEADSCALE_HTTP_PORT:-6888}:8080"
+      - "${HEADSCALE_STUN_PORT:-3478}:3478/udp"
+    volumes:
+      - "${DATA_PATH:-/opt/containers/sys}/headscale/config.yaml:/etc/headscale/config.yaml"
+      - "${DATA_PATH:-/opt/containers/sys}/headscale/data:/var/lib/headscale"
+    restart: unless-stopped
+    networks:
+      - ztcloud
 
   etcd:
     image: ${ETCD_IMAGE:-quay.io/coreos/etcd:latest}
@@ -40,9 +41,8 @@ services:
       - ztcloud
 
   coredns:
-    image: ${COREDNS_IMAGE:-coredns/coredns:latest}
+    image: ${COREDNS_IMAGE:-docker.io/coredns/coredns:1.11.1}
     container_name: ${COREDNS_NAME:-coredns}
-    #entrypoint: /entrypoint.sh
     command: -conf /etc/coredns/Corefile
     ports:
       - "${COREDNS_TCP_PORT:-53}:53/tcp"
@@ -61,7 +61,7 @@ services:
       retries: 3
 
   caddy:
-    image: ${CADDY_IMAGE:-caddy:latest}
+    image: ${CADDY_IMAGE:-docker.io/library/caddy:latest}
     container_name: ${CADDY_NAME:-caddy}
     command: caddy run --config /etc/caddy/Caddyfile.json
     ports:
