--- a/install/config/.env
+++ b/install/config/.env
@@ -17,7 +17,7 @@ COREDNS_UDP_PORT=53
 
 # Caddy container
 CADDY_NAME=caddy
-ADDY_IMAGE=docker.io/library/caddy:latest
+CADDY_IMAGE=docker.io/library/caddy:latest
 CADDY_ADMIN_PORT=2019
 CADDY_HTTPS_PORT=443
 
