coredns health check fix

--- a/install/config/ztcloud-compose.yaml
+++ b/install/config/ztcloud-compose.yaml
@@ -51,9 +51,9 @@ services:
     depends_on:
       - etcd
     healthcheck:
-      test: ["CMD", "coredns", "-version"]
+      test: ["CMD", "sh", "-c", "echo | nc -w 2 127.0.0.1 53 || exit 1"]
       interval: 30s
-      timeout: 10s
+      timeout: 5s
       retries: 3
 
   caddy:
@@ -70,18 +70,18 @@ services:
     networks:
       - ztcloud
 
-  # ztcldns:
-  #   image: ${ZTCLDNS_IMAGE:-ztcldns:latest}
-  #   container_name: ${ZTCLDNS_NAME:-ztcldns}
-  #   environment:
-  #     - BASE_DOMAIN=${BASE_DOMAIN:-ztcloud.ztcl}
-  #   volumes:
-  #     - /var/run/docker.sock:/var/run/docker.sock
-  #     - "${DATA_PATH:-/opt/containers/sys}/coredns/hosts:/sync/hosts"
-  #     - "${DATA_PATH:-/opt/containers/sys}/caddy/containers:/sync/caddy/containers"
-  #   restart: unless-stopped
-  #   networks:
-  #     - ztcloud
+  #ztcldns:
+  #  image: ${ZTCLDNS_IMAGE:-ztcldns:latest}
+  #  container_name: ${ZTCLDNS_NAME:-ztcldns}
+  #  environment:
+  #    - BASE_DOMAIN=${BASE_DOMAIN:-ztcloud.ztcl}
+  #  volumes:
+  #    - /var/run/docker.sock:/var/run/docker.sock
+  #    - "${DATA_PATH:-/opt/containers/sys}/coredns/hosts:/sync/hosts"
+  #    - "${DATA_PATH:-/opt/containers/sys}/caddy/containers:/sync/caddy/containers"
+  #  restart: unless-stopped
+  #  networks:
+  #    - ztcloud
 
 networks:
   ztcloud:
