added dummy container for ztcl -panel

--- a/install/config/.env
+++ b/install/config/.env
@@ -21,6 +21,11 @@ CADDY_IMAGE=docker.io/library/caddy:latest
 CADDY_ADMIN_PORT=2019
 CADDY_HTTPS_PORT=443
 
+# ZTCL Panel container
+ZTCLP_NAME=caddy
+ZTCLP_IMAGE=docker.io/library/python:3.12-alpine
+ZTCLP_ADMIN_PORT=8000
+
 # ztcldns container
 ZTCLDNS_NAME=ztcldns
 ZTCLDNS_IMAGE=ztcldns:latest
