--- a/install/config/.env
+++ b/install/config/.env
@@ -22,7 +22,7 @@ CADDY_ADMIN_PORT=2019
 CADDY_HTTPS_PORT=443
 
 # ZTCL Panel container
-ZTCLP_NAME=caddy
+ZTCLP_NAME=ztcl-panel
 ZTCLP_IMAGE=docker.io/library/python:3.12-alpine
 ZTCLP_ADMIN_PORT=8000
 
