added tailscale install / registration to headscale

--- a/install/config/.env
+++ b/install/config/.env
@@ -54,3 +54,7 @@ TLS_EMAIL=you@ztcloud.org
 
 # PODMAN REGISTERY
 PODMAN_RESTART_ON_REGISTRY_UPDATE=true
+
+# Global Net
+ZTCL_NETWORK=skynet
+IS_MASTER=true
