headscale config fixes

--- a/install/config/.env
+++ b/install/config/.env
@@ -7,7 +7,7 @@ HEADSCALE_IMAGE=ghcr.io/juanfont/headscale:latest
 HEADSCALE_HTTP_PORT=6888
 HEADSCALE_STUN_PORT=3478
 HEADSCALE_GRPC_PORT=50443
-HEADSCALE_SERVER_URL=http://192.168.10.4:6888
+HEADSCALE_SERVER_URL=http://localhost:6888
 
 # CoreDNS container
 COREDNS_NAME=coredns
