--- a/install/config/templates/sys/headscale.config.template.yaml
+++ b/install/config/templates/sys/headscale.config.template.yaml
@@ -1,4 +1,4 @@
-server_url: http://192.168.10.4:6888
+server_url: http://localhost:6888
 listen_addr: 0.0.0.0:8080
 grpc_listen_addr: 0.0.0.0:50443
 grpc_allow_insecure: true
