mesh network init working

--- a/install/config/templates/sys/headscale.config.template.yaml
+++ b/install/config/templates/sys/headscale.config.template.yaml
@@ -20,8 +20,7 @@ derp:
     stun_listen_addr: "0.0.0.0:3478"
     private_key_path: /var/lib/headscale/derp_server_private.key
     automatically_add_embedded_derp_region: true
-  urls:
-    - https://controlplane.tailscale.com/derpmap/default
+  urls: []  # ← Don't override the DERP map
   paths: []
   auto_update_enabled: true
   update_frequency: 24h
